fixed alignment of text on flickery homepage block

--- a/app/less/pages/home/home-process.less
+++ b/app/less/pages/home/home-process.less
@@ -158,6 +158,7 @@
 	//text-align:center;
 	.column {
 		height:100%;
+		text-align:center;
 	}
 	.darken {
 		width:100%;
@@ -168,13 +169,21 @@
 		z-index:-1;
 		top:0;
 	}
-	p {
-		color:white;
-		font-family:@primary-font-bold;
-		text-transform:uppercase;
-		margin-top:10rem;
-		font-size:2.5em;
-		//vertical-align:middle;
-		//line-height:100vh;
+	.text-and-button {
+		position:absolute;
+		top:50%;
+		left:50%;
+		transform:translate(-50%, -50%);
+		width:100%;
+		p {
+			color:white;
+			font-family:@primary-font-bold;
+			text-transform:uppercase;
+			margin:0;
+			font-size:2.5em;
+			line-height:45px;
+			//vertical-align:middle;
+			//line-height:100vh;
+		}
 	}
 }
